@@ -10,7 +10,8 @@ Noteworthy changes in release ?.?? (????-??-??)
   * Implemented printing of Unix socket sun_path field's SELinux context.
   * Improved decoding of INET_DIAG_MD5SIG, INET_DIAG_PROTOCOL,
     INET_DIAG_REQ_PROTOCOL, INET_DIAG_SHUTDOWN, INET_DIAG_SK_BPF_STORAGES,
-    and INET_DIAG_ULP_INFO NETLINK_SOCK_DIAG netlink attributes.
+    INET_DIAG_SOCKOPT, and INET_DIAG_ULP_INFO NETLINK_SOCK_DIAG netlink
+    attributes.
   * Updated the list of NET_IPV4_CONF_* constants.
   * Updated lists of ioctl commands from Linux 5.19.
 
